# prius_simulator

./: .gitignore  .gitmodules  README.md  autoware.repos
prius_description/: CMakeLists.txt  package.xml
prius_description/launch/: description.launch.py
prius_description/urdf/prius/: prius.sdf.xacro
prius_gazebo/: CMakeLists.txt  package.xml
prius_gazebo/configs/: prius_bridge.yaml
prius_gazebo/launch/: empty_world.launch.py  prius_empty_world.launch.py  prius_simple_city.launch.py  simple_city.launch.py  spawn_prius.launch.py
prius_gazebo/maps/2d_maps/: simple_city.yaml
prius_gazebo/worlds/: empty_world.sdf  simple_city.sdf
prius_simulator/: CMakeLists.txt  package.xml
prius_viz/: CMakeLists.txt  package.xml
prius_viz/launch/: view_model.launch.py  view_robot.launch.py
prius_viz/rviz2/: model_view.rviz  robot_view.rviz
